--- a/Auswertung.Rmd
+++ b/Auswertung.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 
-
+#TestTestTest
 
 #Arbeitsumgebung aufräumen
 rm(list = ls())
